Remove hard file paths

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
-    <link rel="stylesheet" href="file://C:\Users\Miki\Stuff\Web Projects\WhatsApp Viewer\Web Server\static\stylesheet.css" />
+    <link rel="stylesheet" href="stylesheet.css" />
     <title>WhatsApp Chat Log Viewer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="file://C:\Users\Miki\Stuff\Web Projects\WhatsApp Viewer\Web Server\static\script.js"></script>
-    <script src="file://C:\Users\Miki\Stuff\Web Projects\WhatsApp Viewer\Web Server\static\submit.js"></script>
+    <script src="script.js"></script>
+    <script src="submit.js"></script>
 </head>
 
 <body>
