--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </div>
     
     <div id="chatbox">
-        <form action="/generate" method="post" role="form">
-            <!--<input type="file" id="file-select" name="chatfile" />-->
-            <input type="text" id="namebox" name="chatname" />
+        <form method="post" role="form">
+            <input type="file" id="fileSelector" name="chatfile" />
             <button type="button">Upload</button>
         </form>
     </div>
