--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <link rel="stylesheet" href="stylesheet.css" />
     <title>WhatsApp Chat Log Viewer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
