--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="toolbox">
-    <h4>WhatsApp Viewer v1.0</h4>
+    <h4>WhatsApp Viewer</h4>
     <div style="margin: auto; width: 60%;"></div>
     <div id="buttonArea">
         <div id="switchButton" class="toolboxbutton">Switch Sides</div>
@@ -58,6 +58,8 @@
                 <button type="button" id="samplebutton" class="btn btn-success"><i class="fa fa-file-text" aria-hidden="true"></i> Load Sample File</button>
             </div>
         </div>
+        <small style="text-align: center; color: grey">Version 1.0</small>
+        <br>
     </div>
 </div>
 
