--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span aria-hidden="true">×</span>
         </button>
         <div class="infobox">
-            <h1><u>File Upload</u></h1>
+            <h1>File Upload</h1>
         </div>
         <div class="infobox"> 
             <div class="alert alert-info" role="alert">
