--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </button>
         <div class="infobox">
             <h1>File Upload</h1>
+            <p>Currently does not support group chats.</p>
         </div>
         <div class="infobox"> 
             <div class="alert alert-info" role="alert">
